test/errors/circular-dependencies-three/packages/library-ui/index.ts
export * from '@library-cirulcar-dependencies-three/ui/src/library.module';
export * from '@library-cirulcar-dependencies-three/ui/src/input/input.component';
